# thunderbird-accounts

./: .editorconfig  .env.example  .env.test  .env.test.docker  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.celery.stage  Dockerfile.keycloak  Dockerfile.stage  README.md  boot-docker-build.sh  boot-docker-deps.sh  bootstrap.py  build-and-run-docs.sh  config.toml.example  docker-compose.yml  env.d.ts  eslint.config.mts  jmap_test.py  manage.py  package-lock.json  package.json  prep-local.sh  pyproject.toml  run-tests-and-generate-coverage.sh  run-tests.sh  tsconfig.json  vite.config.mjs  vite.config.mts
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-multiarch-image.yml  deploy-stage.yml  e2e-desktop-nightly-chrome.yml  e2e-desktop-nightly-firefox.yml  e2e-desktop-nightly-safari.yml  e2e-mobile-nightly-android.yml  e2e-mobile-nightly-ios.yml  e2e-test-local.yml  merge.yml  nightly-tests-desktop.yaml  publish-images.yml  release.yml  validate.yml
assets/: app.js
assets/app/: app.js  app.ts  defines.ts  router.ts
assets/app/composables/: i18n.ts
assets/app/l10n/: en.json
assets/app/vue/: App.vue  defines.ts  router.ts  types.ts  utils.ts
assets/app/vue/components/: AccountInfoForm.vue  ActionCard.vue  Avatar.vue  CardContainer.vue  CheckoutFlow.vue  ContactSupportForm.vue  CsrfToken.vue  DetailsSummary.vue  FooterBar.vue  GenericModal.vue  HeaderBar.vue  NavBar.vue  NeedSupportCard.vue  PlanCard.vue  SelfServeForm.vue  ServerSettingsCard.vue  TourCard.vue  (+5 more)
assets/css/: fonts.css  main.css  variables.css  vue-main.css  wait-list.css
assets/css/fonts/: inter.css  metropolis.css
assets/css/zendesk/: sidebar.css
assets/shared/: public_routes.json
assets/vue/components/: AccountInfoForm.vue  CsrfToken.vue  SelfServeForm.vue  SignInToSignUpForm.vue  SignUpFlowForm.vue
docs/: .gitignore  building.rst  conf.py  database_erd.md  database_erd.rst  deploying-thundermail-waiting-list.rst  feature-flags.rst  frontend.rst  index.rst  infra.rst  intended_sequence.rst  internal_client_env.rst  keycloak-theme.rst  mail.rst  modules.rst  readme.md  requirements.txt  sign-up.rst  stalwart-v0.16-migration.md  tasks.rst  webhooks.rst
docs/admin/: faq.rst  users.md
docs/ci/: image-publish-pipeline.md
docs/keycloak/: how-to-deploy-to-prod.rst  how-to-integrate.rst  theme.rst
keycloak/: readme.md
keycloak/config-cli/: tbpro-mfa-stepup.yaml
keycloak/data/import/: master-realm.json  master-users-0.json  tbpro-realm.json  tbpro-users-0.json
keycloak/themes/: keycloak-vite.config.mjs
mail/: .gitignore
pulumi/: Pulumi.prod.yaml  Pulumi.rjung.yaml  Pulumi.stage.yaml  Pulumi.yaml  __main__.py  config.prod.yaml  config.rjung.yaml  config.stage.yaml  pyproject.toml  requirements.txt  ruff.toml
samples/: query_jmap.py
scripts/: PgAdvisoryLockRun.java  apply-mfa-config.sh  celery-entry.sh  dev-entry.sh  entry-keycloak.sh  entry.sh
src/thunderbird_accounts/: __init__.py  admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/thunderbird_accounts/authentication/: __init__.py  admin.py  api.py  apps.py  clients.py  const.py  exceptions.py  mfa.py  mfa_management.py  middleware.py  models.py  permissions.py  readme.md  reserved.py  serializers.py  signals.py  tasks.py  tests.py  tests_tasks.py  tokens.py  urls.py  utils.py  views.py
src/thunderbird_accounts/celery/: __init__.py  exceptions.py
src/thunderbird_accounts/client/: __init__.py  admin.py  apps.py  models.py  tasks.py  tests.py  utils.py
src/thunderbird_accounts/core/: admin.py  apps.py  cors.py  models.py  types.py  utils.py  validators.py  views.py  zendesk_sidebar.py
src/thunderbird_accounts/infra/: __init__.py  urls.py  views.py
src/thunderbird_accounts/legal/: admin.py  apps.py  models.py  urls.py  views.py
src/thunderbird_accounts/mail/: __init__.py  admin.py  api.py  apps.py  autodiscover_probe.py  client.py  clients.py  decorators.py  dkim.py  dns.py  exceptions.py  hosted_dkim_backfill.py  middleware.py  models.py  tasks.py  tests.py  tiny_jmap_client.py  urls.py  utils.py  views.py  zendesk.py
src/thunderbird_accounts/subscription/: __init__.py  admin.py  apps.py  decorators.py  mailchimp.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/thunderbird_accounts/support/: apps.py  cors.py  customer.py  urls.py  views.py  zendesk.py
src/thunderbird_accounts/telemetry/: __init__.py  api.py  client.py  tasks.py  tests.py  tests_keycloak.py  tests_stalwart.py  urls.py  views.py
src/thunderbird_accounts/utils/: apps.py  exceptions.py  models.py  types.py  utils.py
static/: .gitignore
static/css/fonts/: inter-display.css
templates/: base.html  vue-base.html
templates/mail/: contact.html  index.html  self-serve.html  signup.html  wait-list.html  waitlist.html
templates/mail/self-serve/: _base.html  _nav.html  account-info.html  app-passwords.html  connection-info.html  subscription-success.html  subscription.html
templates/mail/sign-up/: index.html
test/e2e/: .env.dev.example  .env.prod.example  .env.stage.example  CONTAINER-HANDOVER.md  README.md  browserstack-desktop-nightly.yml  browserstack-desktop.yml  browserstack-mobile-nightly.yml  browserstack-mobile.yml  browserstack.yml  package-lock.json  package.json  playwright.config.ts
test/e2e/const/: constants.ts  types.ts
test/e2e/pages/: checkout-page.ts  contact-page.ts  dashboard-page.ts  email-sign-up-page.ts  fxa-page.ts  mail-page.ts  paddle-frame.ts  self-serve-page.ts  tb-accts-hub-page.ts  tb-accts-oidc-page.ts  tb-accts-signup-page.ts
test/e2e/test-files/: test-attachment.txt
test/e2e/tests/: auth.desktop.setup.ts  auth.setup.ts  checkout.spec.ts  contact.spec.ts  email-sign-up.spec.ts  mfa.spec.ts  self-serve-account-info.spec.ts  self-serve-connection-info.spec.ts  sign-in-self-serve.spec.ts  sign-up.spec.ts
test/e2e/utils/: keycloak-admin.ts  mail-protocol.ts  mfa.ts  oauth.ts  totp.ts  utils.ts
zendesk/: README.md  manifest.json  zcli.apps.config.json
zendesk/translations/: en.json
(+379 files in other folders)
