[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderbird_accounts"
version = "0.3.0"
dependencies = [
    "django>=5.1",
    "django-filter>=24.3",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "pyfxa>=0.7.9",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.3",
    "djangorestframework-simplejwt>=5.3.1",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
    "hiredis>=3.0.0",
    "django-vite>=3.0.6",
    "argon2-cffi>=23.1.0",
    "servestatic>=3.0.0",
]
description = "Accounts hub for Thunderbird Pro Services."
readme = "README.md"
requires-python = ">= 3.12"
authors = [
    {name = "Melissa Autumn"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.thunderbird.net/"

[project.optional-dependencies]
cli = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["thunderbird_accounts"]  # package names should match these glob patterns (["*"] by default)

###############################################################
# Ruff Configuration
###############################################################

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Always generate Python 3.12-compatible code.
target-version = "py312"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = "test"

[dependency-groups]
dev = [
    "faker>=33.1.0",
]
