[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderbird_accounts"
version = "1.13.1"
dependencies = [
    "django>=5.2.14",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "markdown>=3.10",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "cryptography>=48.0",
    "djangorestframework-simplejwt>=5.5.1",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.48.0",
    "psycopg[binary]>=3.3.4",
    "redis==5.2.1", # Locked by Celery 5.5.3
    "hiredis>=3.3.1",
    "django-vite>=3.1.0",
    "argon2-cffi>=25.1.0",
    "servestatic>=4.3.0",
    "sentry-sdk[django]>=2.60.0",
    "requests>=2.34.2",
    "celery[redis]>=5.6.3",
    "django-cors-headers>=4.9.0",
    "mozilla-django-oidc>=5.0.2",
    "regex>=2025.9.1",
    "ua-parser>=1.0.2",
    "dnspython>=2.8.0",
    "django-types>=0.24.0",
    "django-stubs-ext>=6.0.5",
    "flower>=2.0.1",
    "celery-redbeat>=2.3.3",
    "posthog>=7.15.4",
    "cloudflare>=5.2.0",
    # CVE pins
    "idna>=3.15", # CVE-2026-45409 fix
]
description = "Accounts hub for Thunderbird Pro Services."
readme = "README.md"
requires-python = ">= 3.12"
authors = [
    { name = "Thunderbird Services" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.thunderbird.net/"

[project.optional-dependencies]
cli = [
    "ruff",
    "coverage",
    "pytest",
]
docs = [
    'sphinx',
    'sphinx-rtd-theme',
    'sphinxcontrib-django',
    'sphinxcontrib-mermaid',
    'myst-parser',
]
subscription = [
    "paddle-python-sdk>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["thunderbird_accounts"]  # package names should match these glob patterns (["*"] by default)

[tool.django-stubs]
django_settings_module = "thunderbird_accounts.settings"

###############################################################
# Ruff Configuration
###############################################################

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"  # These are auto-generated
]

# Always generate Python 3.12-compatible code.
target-version = "py312"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Enable flagging print (T201)
select = ["E", "F", "T201"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = "test"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "faker>=33.1.0",
    "freezegun>=1.5.5",
]

[tool.coverage.run]
data_file = "coverage/.coverage"
source = ["thunderbird_accounts"]

[tool.coverage.html]
directory = "coverage/htmlcov"
