[project]
name = "thunderbird-accounts-pulumi"
version = "0.0.1"
description = "Pulumi-built infrastructure for thunderbird-accounts"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/thunderbird/thunderbird-accounts.git"
issues = "https://github.com/thunderbird/thunderbird-accounts/issues?q=is%3Aissue%20state%3Aopen%20label%3Ainfra"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "ruff"
]